kubernetes/beam.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
    env: test
  ports:
  - port: 27017
    targetPort: 27017 
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb   
  labels:
    app: mongodb
    env: test
spec: 
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:  
    metadata:
      labels:
        app: mongodb
    spec:
      containers: 
        - name: mongo
          image: mongo:4.0.9
          command:
            - mongod
            - "--bind_ip"
            - "0.0.0.0"
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
              name: mongo
              hostPort: 27017
              protocol: TCP
          volumeMounts:
              - mountPath: /data/db
                name: mongodb-volume
      volumes:
        - name: mongodb-volume
          hostPath:
            path: /home/debian/mongodb 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions
  labels:
    app: transactions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactions
  template:
    metadata:
      labels:
        app: transactions
    spec:
      containers:
      - name: transactions
        image: ghcr.io/mreider/beams:latest
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            memory: 64Mi
            cpu: 100m
        command:
            - node
            - "transactionServer.js"
        ports:
        - containerPort: 3000
          name: transactions
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/mreider/beams:latest
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            memory: 64Mi
            cpu: 100m
        command:
            - node
            - "frontEndServer.js"
        ports:
        - containerPort: 3000
          name: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculations
  labels:
    app: calculations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculations
  template:
    metadata:
      labels:
        app: calculations
    spec:
      containers:
      - name: calculations
        image: ghcr.io/mreider/beams:latest
        command:
          - node
          - "calculationServer.js"
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            memory: 64Mi
            cpu: 100m
        ports:
        - containerPort: 3000
          name: calculations
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: confirmations
  labels:
    app: confirmations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confirmations
  template:
    metadata:
      labels:
        app: confirmations
    spec:
      containers:
      - name: confirmations
        image: ghcr.io/mreider/beams:latest
        command:
          - node
          - "confirmationServer.js"
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            memory: 64Mi
            cpu: 100m
        ports:
        - containerPort: 3000
          name: confirmations
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resolutions
  labels:
    app: resolutions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resolutions
  template:
    metadata:
      labels:
        app: resolutions
    spec:
      containers:
      - name: resolutions
        image: ghcr.io/mreider/beams:latest
        command:
          - node
          - "resolutionServer.js"
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            memory: 64Mi
            cpu: 100m
        ports:
        - containerPort: 3000
          name: resolutions
---
apiVersion: v1
kind: Service
metadata:
  name: resolutions
spec:
  ports:
  - name: api
    port: 3000
    targetPort: 3000
  selector:
    app: resolutions
---
apiVersion: v1
kind: Service
metadata:
  name: calculations
spec:
  ports:
  - name: api
    port: 3000
    targetPort: 3000
  selector:
    app: calculations
---
apiVersion: v1
kind: Service
metadata:
  name: confirmations
spec:
  ports:
  - name: api
    port: 3000
    targetPort: 3000
  selector:
    app: confirmations
---
apiVersion: v1
kind: Service
metadata:
  name: transactions
spec:
  ports:
  - name: api
    port: 3000
    targetPort: 3000
  selector:
    app: transactions
