kubernetes/beams.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app.kubernetes.io/name: mongo
    app.kubernetes.io/component: backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mongo
      app.kubernetes.io/component: backend
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongo
        app.kubernetes.io/component: backend
    spec:
      containers:
      - name: mongo
        image: mongo:4.2
        args:
          - --bind_ip
          - 0.0.0.0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app.kubernetes.io/name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app.kubernetes.io/name: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions
  labels:
    app: transactions
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transactions
  template:
    metadata:
      labels:
        app: transactions
    spec:
      containers:
      - name: transactions
        image: ghcr.io/mreider/beams:48
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            memory: 64Mi
            cpu: 100m
        command:
            - node
            - "transactionServer.js"
        ports:
        - containerPort: 3000
          name: transactions
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/mreider/beams:48
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            memory: 64Mi
            cpu: 100m
        command:
            - node
            - "frontEndServer.js"
        ports:
        - containerPort: 3000
          name: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculations
  labels:
    app: calculations
spec:
  replicas: 3
  selector:
    matchLabels:
      app: calculations
  template:
    metadata:
      labels:
        app: calculations
    spec:
      priorityClassName: high-priority
      containers:
      - name: calculations
        image: ghcr.io/mreider/beams:48
        command:
          - node
          - "calculationServer.js"
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            memory: 64Mi
            cpu: 100m
        ports:
        - containerPort: 3000
          name: calculations
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: confirmations
  labels:
    app: confirmations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confirmations
  template:
    metadata:
      labels:
        app: confirmations
    spec:
      containers:
      - name: confirmations
        image: ghcr.io/mreider/beams:48
        command:
          - node
          - "confirmationServer.js"
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            memory: 64Mi
            cpu: 100m
        ports:
        - containerPort: 3000
          name: confirmations
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resolutions
  labels:
    app: resolutions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resolutions
  template:
    metadata:
      labels:
        app: resolutions
    spec:
      containers:
      - name: resolutions
        image: ghcr.io/mreider/beams:48
        command:
          - node
          - "resolutionServer.js"
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            memory: 64Mi
            cpu: 100m
        ports:
        - containerPort: 3000
          name: resolutions
---
apiVersion: v1
kind: Service
metadata:
  name: resolutions
spec:
  ports:
  - name: api
    port: 3000
    targetPort: 3000
  selector:
    app: resolutions
---
apiVersion: v1
kind: Service
metadata:
  name: calculations
spec:
  ports:
  - name: api
    port: 3000
    targetPort: 3000
  selector:
    app: calculations
---
apiVersion: v1
kind: Service
metadata:
  name: confirmations
spec:
  ports:
  - name: api
    port: 3000
    targetPort: 3000
  selector:
    app: confirmations
---
apiVersion: v1
kind: Service
metadata:
  name: transactions
spec:
  ports:
  - name: api
    port: 3000
    targetPort: 3000
  selector:
    app: transactions
---
apiVersion: v1
kind: Pod
metadata:
  name: podkiller
spec:
  serviceAccountName: podkiller
  containers:
    - name: podkiller
      image: ghcr.io/mreider/beams:48
      command:
            - node
            - "podkiller.js"
      resources:
        requests:
          cpu: 100m
          memory: 32Mi
        limits:
          memory: 64Mi
          cpu: 100m
