kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sampleApp-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: finance2-ip
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
    app: frontend
spec:
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - dynakube.com
    secretName: sampleApp-cert-secret # < cert-manager will store the created certificate in this secret
  rules:
  - host: dynakube.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: frontend
          servicePort: 80
